# wrangling_with_spark

./: README.md  exploratoria.ipynb  pyproject.toml  script.py
